Diagnostic Log and Trace  - Release Notes
=========================================
Alexander Wenzel <Alexander.AW.Wenzel@bmw.de>

Version
-------
2.9.0 RELEASE

Changes
-------

2.9.0

   * Increased buffer sizes for DLT user library and DLT daemon
   * [GDLT-120]: truncated and Segmented network tracing
   * [GDLT-137]: Automatically try resending of user buffer after FIFO full
   * [GSWD-85]:  Added authors file
   
2.8.0

   * [GDLT-115]: Encapsulate user macros
   * Fix register app and register context was not stored in buffer when FIFO is full. Other controll messages still not saved in buffer.
   * Create new fifo only when same application registers with different pid.'
   * Do not register appliction again, if already registered.
   * Fixed filetransfer not checking buffer fill level.

2.7.0

   * [GDLT-24] Fixing compiler warnings
   * [GDLT-94] Optional sending periodic software version messages. See man pages for more informations
   * [GENDLT-26] Check for description length sanity
   * [GENDLT-24] Crash on invalid injection message fixed
   * [GDLT-93] Add -Wextra flags for compilation Fixed all the warnings that
   * [GDLT-90] Optional: systemd watchdog concept in dlt-system and dlt-daemon
   * [GDLT-67] Re-implemented dlt-system. Read full commit message for more information

2.6.2

   * [GDLT-89] Fixed daemon doesn't sent the persistent log level
   * [GDLT-88] Fixed wrong initalization order using offline trace function

2.6.1

   * Add _GNU_SOURCE Definition to be able to use O_CLOEXEC
   * Added important SEM_FREE in the daemon and closing fd in the filetransfer
   * [GDLT-3] Fixed missing semaphore around dlt_buffer_push3
   * [GDLT-86] Fixed dlt_free uses absolute file path /tmp and not DLT_USER_DEFINE define
   * [D4099] Check for duplicate file handles, and clean them up if found
   * [GDLT-85] Pipes opened multiple times for the same application pid fixed
   * [GDLT-82] Child process inherits file descriptors openend by their parent fixed