@@ -46,26 +46,59 @@ the commandline for cmake
 
 Create Man pages
 ----------------
-With the compile option "WITH_MAN=ON" (default value) the man 
-pages will generated. After the call "sudo make install" (see 
-"Compiling in Linux") they are installed at <CMAKE_INSTALL_PREFIX>/share/man. 
+The man pages are generated with following commands.
+They are generated by default (WITH_MAN=ON).
 
-Create doxygen documentation
+----
+mkdir build
+cd build
+cmake ..
+make
+sudo make install
+----
+
+You will find the man pages after installation in <CMAKE_INSTALL_PREFIX>/share/man.
+
+The man pages are generated with asciidoc.
+If the man pages are changed the following command must be executed.
+
+----
+mkdir build
+cd build
+cmake -DWITH_DOC=ON ..
+make doc-man
+----
+
+The generated man pages overwrites the existing ones.
+
+Create manuals documentation
 ----------------------------
-- mkdir build
-- cd build
-- cmake -DWITH_DOC=ON ..
-- make 
-- (only DLT doc - optional )make doc
-- (only DLT-Filetransfer - optional )make doc-filetransfer
+The manuals are generated with asciidoc.
 
-You find the documentation know as HTML, RTF or LaTex in <project-root>/build/doc
+----
+mkdir build
+cd build
+cmake -DWITH_DOC=ON ..
+make doc-manuals
+----
 
-- Doxygen documentation
+You will find the generated documents in build/doc/manuals.
+
+Create api documentation
+------------------------
+The API documentation is generated with doxygen.
+
+----
+mkdir build
+cd build
+cmake -DWITH_DOC=ON ..
+make doc
+----
+
+You will find the generated documents in build/doc/DOC_DLT.
 
 Generation of systemd unit files
 --------------------------------
-
 DLT provides some example unit files for systemd, stored in <DLT-root>/systemd.
 In <DLT-root>/systemd/CMakeLists.txt you have to specify some values, e.g. the port for dlt-adaptor-udp.
 By default the generation of unit files with cmake is off. Please follow these steps to enable the generation:
@@ -92,7 +125,7 @@ If you are behind a proxy you have to set up the Git proxy configuration, e.g.
 git config --global http.proxy $http_proxy
 ----
 
-Checkout the code from the GENIVI Git repository.
+Checkout the code from the OSS Git repository.
 
 ----
 git clone http://git.projects.genivi.org/dlt-daemon.git
