@@ -12,7 +12,7 @@ This document combines all DLT documents into a single document.
 Information
 -----------
 
-:leveloffset: 2
+:leveloffset: 1
 
 include::../README.txt[]
 include::../INSTALL.txt[]
@@ -23,7 +23,7 @@ include::../ReleaseNotes.txt[]
 Manpages
 --------
 
-:leveloffset: 2
+:leveloffset: 1
 
 include::dlt-daemon.1.txt[]
 include::dlt.conf.5.txt[]
@@ -37,7 +37,7 @@ include::dlt-receive.1.txt[]
 Manuals
 -------
 
-:leveloffset: 2
+:leveloffset: 1
 
 include::dlt_user_manual.txt[]
 include::dlt_cheatsheet.txt[]
